# gg

./: .editorconfig  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SHELL_BEHAVIOR.md  TODO.md  Tauri.toml  build.rs  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.cargo/: audit.toml  config.toml
.claude/: settings.json  settings.local.json
.claude/commands/: cargo-dedupe.md  update-instructions.md
.claude/skills/set-version/: SKILL.md
.claude/skills/update-jj/: SKILL.md
.github/: copilot-instructions.md  jujutsu-guide.md
.github/prompts/: cargo-dedupe.prompt.md  plan-askpassAuthentication.prompt.md  plan-simplifyMoveHunk.prompt.md  plan-splitRebaseSquash.prompt.md  update-instructions.prompt.md
.github/specs/: gui-mode.md  web-mode.md
.github/workflows/: ci.yml  homebrew.yml  publish.yml  winget.yml
app/: App.svelte  GraphLine.svelte  GraphLog.svelte  GraphNode.svelte  LogPane.svelte  LogPane.test.ts  OpLogPane.svelte  RevisionPane.svelte  RevisionPane.test.ts  Shell.svelte  events.ts  global.css  ids.test.ts  ids.ts  ipc.ts  mocks.ts  platform.ts  route.ts  stores.ts  vite-env.d.ts
app/controls/: ActionLink.svelte  ActionWidget.svelte  AuthorSpan.svelte  BookmarkSpan.svelte  BranchSpan.svelte  CheckWidget.svelte  Chip.svelte  Chip.test.ts  ContextMenu.svelte  ContextMenu.test.ts  Icon.svelte  IdSpan.svelte  ListWidget.svelte  ProgressWidget.svelte  SelectWidget.svelte  SetSpan.svelte  TimestampRangeSpan.svelte  TimestampSpan.svelte  ToggleWidget.svelte
app/messages/: AbandonRevisions.ts  AdoptRevision.ts  BackoutRevisions.ts  ChangeHunk.ts  ChangeId.ts  ChangeLocation.ts  ChangeRange.ts  CloneEvent.ts  CloneRepository.ts  CopyChanges.ts  CopyHunk.ts  CreateRevision.ts  CreateRevisionBetween.ts  DeleteRef.ts  DescribeRevision.ts  DisplayPath.ts  DuplicateRevisions.ts  ExternalDiff.ts  ExternalResolve.ts  FileContent.ts  FileRange.ts  ForgetWorkspace.ts  GitFetch.ts  GitPush.ts  GitRefspec.ts  InitRepository.ts  InputField.ts  InputRequest.ts  InputResponse.ts  InsertRevision.ts  InsertRevisions.ts  LogLine.ts  LogPage.ts  LogRow.ts  MoveChanges.ts  MoveHunk.ts  MoveRef.ts  MoveRevision.ts  MoveRevisions.ts  MultilineString.ts  (+22 more)
app/mutators/: BinaryMutator.ts  ChangeMutator.ts  RefMutator.ts  RepositoryMutator.ts  RevisionMutator.ts  WorkspaceMutator.ts
app/objects/: BookmarkObject.svelte  ChangeObject.svelte  HunkObject.svelte  Object.svelte  RevisionObject.svelte  TagObject.svelte  WorkspaceObject.svelte  Zone.svelte
app/shell/: ErrorDialog.svelte  InputDialog.svelte  ModalDialog.svelte  ModalOverlay.svelte  Pane.svelte  ProgressDialog.svelte  RecentWorkspaces.svelte  Settings.ts  StatusBar.svelte  Toolbar.svelte  ToolbarProgress.svelte
cli/: Cargo.toml  README.md  Tauri.toml  build.rs
cli/src/: main.rs
doc/: CHANGELOG.md  DESIGN.md  TODO.md
doc/specs/: gui-mode.md  multiselect.md
e2e/: harness.ts  load-workspace.test.ts  no-workspace.test.ts  revert.test.ts  tsconfig.json
patches/: svelte-splitpanes.patch
res/: path-fragment.wxs
res/icons/: icon.icns
res/themes/: default.toml  fluent.toml  macos.toml  material.toml
src/: Action.svelte  ActionWidget.svelte  App.svelte  Bound.svelte  BranchMutator.ts  BranchSummary.svelte  ChangeSummary.svelte  CheckWidget.svelte  Graph.svelte  GraphLine.svelte  GraphLog.svelte  GraphNode.svelte  Icon.svelte  IdSpan.svelte  LogPane.svelte  LogView.svelte  ModalDialog.svelte  ModalOverlay.svelte  Mutator.ts  Pane.svelte  PathSpan.svelte  RevisionMutator.ts  RevisionPane.svelte  RevisionSummary.svelte  StatusBar.svelte  TreeMutator.ts  askpass.rs  events.ts  git_util.rs  global.css  ipc.ts  lib.rs  macos.rs  main.rs  main.ts  menu.rs  messages.ts  stores.ts  styles.css  web.rs  (+2 more)
src-tauri/: .gitignore  Cargo.toml  Tauri.toml  absorb.md  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: callbacks.rs  format.rs  gui_util.rs  handler.rs  main.rs  menu.rs  messages.rs  settings.rs  tests.rs  windows.rs  worker.rs
src-tauri/src/config/: gg.toml  mod.rs
src-tauri/src/messages/: mod.rs  mutations.rs  queries.rs
src-tauri/src/worker/: gui_util.rs  mod.rs  mutations.rs  queries.rs  session.rs  tests.rs
src-tauri/src/worker/tests/: mod.rs  mutations.rs  queries.rs  session.rs
src/config/: gg.toml  mod.rs  tests.rs
src/controls/: ActionWidget.svelte  AuthorSpan.svelte  BoundQuery.svelte  BranchSpan.svelte  CheckWidget.svelte  Chip.svelte  EmojiText.svelte  Icon.svelte  IdSpan.svelte  ListWidget.svelte  SelectWidget.svelte
src/gui/: callbacks.rs  handler.rs  menu.rs  mod.rs  recent_items.rs  sink.rs
src/lib/: Greet.svelte  LogView.svelte
src/messages/: AbandonRevision.ts  AbandonRevisions.ts  BackoutRevisions.ts  ChangeHunk.ts  ChangeId.ts  ChangeKind.ts  ChangePath.ts  CheckoutRevision.ts  CommitId.ts  CopyChanges.ts  CreateBranch.ts  CreateRef.ts  CreateRevision.ts  DeleteBranch.ts  DeleteRef.ts  DescribeRevision.ts  DiffPath.ts  DisplayPath.ts  DuplicateRevision.ts  DuplicateRevisions.ts  FetchRemote.ts  FileRange.ts  GitFetch.ts  GitPush.ts  HunkLocation.ts  Id.ts  InputField.ts  InputRequest.ts  InputResponse.ts  InsertRevision.ts  LogChange.ts  LogCoordinates.ts  LogEdge.ts  LogLine.ts  LogNode.ts  LogPage.ts  LogRow.ts  MenuContext.ts  MoveBranch.ts  MoveChanges.ts  (+28 more)
src/mutators/: BinaryMutator.ts  BranchMutator.ts  ChangeMutator.ts  RefMutator.ts  RevisionMutator.ts
src/objects/: BranchObject.svelte  ChangeObject.svelte  HunkObject.svelte  Object.svelte  RevisionObject.svelte  TagObject.svelte  Zone.svelte
src/shell/: ErrorDialog.svelte  InputDialog.svelte  ModalDialog.svelte  ModalOverlay.svelte  OptionsDialog.svelte  Pane.svelte  RecentWorkspaces.svelte  Settings.ts  StatusBar.svelte
src/theme/: mod.rs  tests.rs
src/web/: mod.rs  queries.rs  sink.rs  state.rs  tests.rs  triggers.rs
src/worker/: git_util.rs  gui_util.rs  mod.rs  mutations.rs  queries.rs  session.rs
src/worker/mutations/: change.rs  mod.rs  ref.rs  revision.rs
(+4 files in other folders)
