[package]
name = "gg-cli"
version = "0.36.3"
description = "GG - Gui for JJ"
authors = ["Thomas Castiglione"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gulbanana/gg"
homepage = "https://github.com/gulbanana/gg"
keywords = ["jujutsu", "jj", "vcs", "scm", "gui"]
categories = ["development-tools"]
include = [
    "/dist/**/*",
    "/gen/**/*",
    "/res/**/*",
    "/src/**/*",
    "/build.rs",
    "/Tauri.toml",
    "/index.html",
    "/LICENSE",
    "/README.md",
]

[package.metadata.release]
pre-release-hook = ["npm", "run", "build"]

[[bin]]
name = "gg"
path = "src/main.rs"

# custom-protocol is magic - tauri build adds it, tauri dev removes. it's on by default so that cargo run works
[features]
default = ["custom-protocol"]
gui = []
custom-protocol = ["tauri/custom-protocol"]
ts-rs = ["dep:ts-rs"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-toml"] }

[dev-dependencies]
tempfile = "3.23"
zip = "6.0"
assert_matches = "1.5"

[dependencies]
tauri = { version = "2.0.0", features = ["config-toml"] }
tauri-codegen = "2.0.0"
tauri-macros = "2.0.0"
tauri-plugin = "2.0.0"
tauri-runtime = "2.0.0"
tauri-runtime-wry = "2.0.0"
tauri-utils = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-log = "2.0.0"

jj-lib = { version = "0.36", features = ["watchman"] }
jj-cli = { version = "0.36" }

# deps shared with JJ, which we try to keep on the same version
anyhow = "1.0.100"
clap = { version = "4.5.53", features = [
    "derive",
    "deprecated",
    "wrap_help",
    "string",
] }
config = { version = "0.13.4", default-features = false, features = ["toml"] }
dirs = "6"
dunce = "1.0.5"
itertools = "0.14"
indexmap = "2.12"
gix = { version = "0.75.0", default-features = false, features = [
    "index",
    "max-performance-safe",
    "blob-diff",
] }
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-util"] }
toml_edit = { version = "0.23.9", features = ["serde"] }
thiserror = "2.0.17"

# deps used by JJ but with different features
chrono = { version = "0.4.42", features = ["serde"] }

# extra deps not used by JJ
log = "0.4"
futures-util = "0.3.31"
ts-rs = { version = "7.1.1", features = ["chrono-impl"], optional = true }
axum = "0.8.8"
webbrowser = { version = "1", features = ["hardened"] }

[target."cfg(windows)".dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "NSData",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSApplication",
    "NSImage",
] }

[profile.dev]
debug = 0
