[package]
name = "gg"
version = "0.29.0"
description = "GG - Gui for JJ"
authors = ["Thomas Castiglione"]
edition = "2024"
rust_version = "1.84"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dev-dependencies]
tempfile = "3.10.1"
zip = "0.6"
assert_matches = "1.5"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-codegen = "2.0.0"
tauri-macros = "2.0.0"
tauri-plugin = "2.0.0"
tauri-runtime = "2.0.0"
tauri-runtime-wry = "2.0.0"
tauri-utils = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-log = "2.0.0"

jj-lib = { version = "0.30", features = ["watchman"] }
jj-cli = { version = "0.30" }

# deps shared with JJ, which we try to keep on the same version
clap = { version = "4.5.39", features = [
    "derive",
    "deprecated",
    "wrap_help",
    "string",
] }
dunce = "1.0.5"
itertools = "0.14.0"
indexmap = { version = "2.9.0", features = ["serde"] }
gix = { version = "0.71.0", default-features = false, features = [
    "attributes",
    "blob-diff",
    "index",
    "max-performance-safe",
    "zlib-rs",
] }
pollster = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
toml_edit = { version = "0.22.26", features = ["serde"] }
thiserror = "2.0.12"

# deps used by JJ but with different features
chrono = { version = "0.4.38", features = ["serde"] }
git2 = { version = "0.20.1", features = ["vendored-libgit2"] }

# extra deps not used by JJ - needs auditing at some point
anyhow = "1.0.93"
dirs = "5.0.1"
config = { version = "0.13.4", default-features = false, features = ["toml"] }
log = "0.4"
futures-util = "0.3.30"
ts-rs = { version = "7.1.1", features = ["chrono-impl"], optional = true }

[target."cfg(windows)".dependencies]
windows = { version = "0.54.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
] }
