[package]
name = "gg"
version = "0.29.1"
description = "GG - Gui for JJ"
authors = ["Thomas Castiglione"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-toml"] }

[dev-dependencies]
tempfile = "3.23"
zip = "6.0"
assert_matches = "1.5"

[dependencies]
tauri = { version = "2.0.0", features = ["config-toml"] }
tauri-codegen = "2.0.0"
tauri-macros = "2.0.0"
tauri-plugin = "2.0.0"
tauri-runtime = "~2.5.0"
tauri-runtime-wry = "2.0.0"
tauri-utils = "~2.3.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "~2.2.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-log = "2.0.0"

jj-lib = { version = "0.35", features = ["watchman"] }
jj-cli = { version = "0.35" }

# deps shared with JJ, which we try to keep on the same version
anyhow = "1.0.100"
clap = { version = "4.5.53", features = [
    "derive",
    "deprecated",
    "wrap_help",
    "string",
] }
config = { version = "0.13.4", default-features = false, features = ["toml"] }
dirs = "6"
dunce = "1.0.5"
itertools = "0.14"
indexmap = "2.12"
gix = { version = "0.74.1", default-features = false, features = [
    "index",
    "max-performance-safe",
    "blob-diff",
] }
pollster = "0.4.0"
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-util"] }
toml_edit = { version = "0.23.7", features = ["serde"] }
thiserror = "2.0.17"

# deps used by JJ but with different features
chrono = { version = "0.4.42", features = ["serde"] }

# extra deps not used by JJ
log = "0.4"
futures-util = "0.3.31"
ts-rs = { version = "7.1.1", features = ["chrono-impl"], optional = true }

[target."cfg(windows)".dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
] }

[profile.release]
lto = true
codegen-units = 1
